force-app/main/default/objects/Inspection__c/Inspection__c.object-meta.xml
<CustomObject>
    <label>Vistoria</label>
    <nameField>
        <displayFormat>INS-{00000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vistorias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>