force-app/main/default/objects/Inspection__c/fields/ContestationAnalysisEventType__c.field-meta.xml
<CustomField>
    <fullName>ContestationAnalysisEventType__c</fullName>
    <label>Tipo de Evento de Análise de Contestação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>create_offboarding_contestation_analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>