force-app/main/default/objects/Inspection__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Vistorias</relationshipLabel>
    <relationshipName>Vistorias</relationshipName>
    <type>Lookup</type>
</CustomField>