force-app/main/default/objects/Inspection__c/fields/ExecutedAt__c.field-meta.xml
<CustomField>
    <fullName>ExecutedAt__c</fullName>
    <label>Executada em</label>
    <type>DateTime</type>
</CustomField>