force-app/main/default/objects/Inspection__c/fields/InspectorId__c.field-meta.xml
<CustomField>
    <fullName>InspectorId__c</fullName>
    <label>Id do Vistoriador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>