force-app/main/default/objects/Inspection__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imóvel</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Vistorias</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>