force-app/main/default/objects/Inspection__c/fields/RepairAnalysisEventDate__c.field-meta.xml
<CustomField>
    <fullName>RepairAnalysisEventDate__c</fullName>
    <label>Data e hora do recebimento do evento</label>
    <type>DateTime</type>
</CustomField>