force-app/main/default/objects/Inspection__c/fields/RepairAnalysisEventType__c.field-meta.xml
<CustomField>
    <fullName>RepairAnalysisEventType__c</fullName>
    <label>Tipo de Evento de Análise de Reparo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>create_offboarding_manual_repair_analysis</fullName>
            </value>
            <value>
                <fullName>fineshed_offboarding_automatic_repair_analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>