force-app/main/default/objects/Inspection__c/fields/ScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduleDate__c</fullName>
    <label>Data Agendada</label>
    <type>DateTime</type>
</CustomField>