force-app/main/default/objects/Inspection__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendada</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Concluída</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
                <label>Revisada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>