force-app/main/default/objects/Inspection__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
            <value>
                <fullName>Constatacao</fullName>
                <label>Constatação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>